refactor: rename 'hello-prisma' workspace to 'quickstart' and update README.md

--- a/quickstart/package.json
+++ b/quickstart/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "hello-prisma",
+  "name": "quickstart",
   "version": "1.0.0",
   "description": "",
   "scripts": {
