--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "",
   "workspaces": [
-    "hello-prisma"
+    "quickstart"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
