refactor: rename 'quickstart' workspace to 'quickstart-sqlite' and update related files

--- a/quickstart-sqlite/package.json
+++ b/quickstart-sqlite/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "quickstart",
+  "name": "quickstart-sqlite",
   "version": "1.0.0",
   "description": "",
   "scripts": {
