--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "description": "",
   "workspaces": [
-    "quickstart-sqlite"
+    "prisma-quickstart-sqlite",
+    "prisma-postgresql"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
