--- a/prisma-quickstart-sqlite/package.json
+++ b/prisma-quickstart-sqlite/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "quickstart-sqlite",
+  "name": "prisma-quickstart-sqlite",
   "version": "1.0.0",
   "description": "",
   "scripts": {
